# phoneclaw

./: .gitignore  Cargo.toml  README.md  build_android.sh
.github/workflows/: android.yml  ci.yml  release.yml
android/: .gitignore  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/phoneclaw/app/: RustBridge.kt  SetupActivity.kt  SetupWizardActivity.kt
android/app/src/main/java/com/phoneclaw/app/wave/: AppConfigStore.kt  ChannelChatSetupActivity.kt  ControllerDashboardActivity.kt  ProviderSecretsActivity.kt  ResourceMonitorActivity.kt  SafetySandboxActivity.kt  SessionLiveActivity.kt  SkillsPermissionsActivity.kt  UiFactory.kt  WorkspaceCreatorActivity.kt
android/app/src/main/java/com/pocketclaw/app/: MainActivity.kt  PocketClawAccessibilityService.kt  PocketClawService.kt  RustBridge.kt  SetupActivity.kt  SetupWizardActivity.kt
android/app/src/main/java/com/pocketclaw/app/wave/: ModelCatalog.kt  ProviderSecretsActivity.kt  SkillsPermissionsActivity.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: accessibility_service_config.xml
app/src/main/: AndroidManifest.xml  baseline-prof.txt
app/src/main/java/com/zeroclaw/android/: MainActivity.kt  ZeroClawApplication.kt
app/src/main/java/com/zeroclaw/android/data/: CredentialsJsonParser.kt  OAuthTokenRefresher.kt  ProviderKeyValidator.kt  ProviderRegistry.kt  SecurePrefsProvider.kt
app/src/main/java/com/zeroclaw/android/data/channel/: ChannelSetupSpec.kt
app/src/main/java/com/zeroclaw/android/data/local/: DatabaseEncryptionMigrator.kt  DatabasePassphrase.kt  SeedData.kt  ZeroClawDatabase.kt
app/src/main/java/com/zeroclaw/android/data/oauth/: AuthProfileWriter.kt  OAuthCallbackServer.kt  OpenAiOAuthManager.kt  PkceState.kt
app/src/main/java/com/zeroclaw/android/data/remote/: ConnectionProber.kt  ModelFetcher.kt  NetworkScanner.kt  OkHttpPluginRegistryClient.kt  PluginRegistryClient.kt
app/src/main/java/com/zeroclaw/android/data/repository/: ActivityRepository.kt  AgentRepository.kt  ApiKeyRepository.kt  ChannelConfigRepository.kt  DataStoreSettingsRepository.kt  EncryptedApiKeyRepository.kt  EstopRepository.kt  InMemoryApiKeyRepository.kt  KeyExportCrypto.kt  LogRepository.kt  OnboardingRepository.kt  PluginRepository.kt  RoomActivityRepository.kt  RoomAgentRepository.kt  RoomChannelConfigRepository.kt  RoomLogRepository.kt  RoomPluginRepository.kt  RoomTerminalEntryRepository.kt  SettingsRepository.kt  TerminalEntryRepository.kt
app/src/main/java/com/zeroclaw/android/data/validation/: ChannelValidator.kt  ProviderValidator.kt  ValidationResult.kt
app/src/main/java/com/zeroclaw/android/model/: ActivityEvent.kt  Agent.kt  ApiKey.kt  AppSettings.kt  BudgetStatus.kt  ComponentHealth.kt  ConnectedChannel.kt  CostSummary.kt  CronJob.kt  DaemonEvent.kt  DaemonStatus.kt  DiagnosticCheck.kt  DiscoveredServer.kt  HealthDetail.kt  KeyRejectionEvent.kt  LogEntry.kt  MemoryConflict.kt  MemoryEntry.kt  Plugin.kt  ProcessedImage.kt  ProviderCapabilities.kt  ProviderInfo.kt  RefreshCommand.kt  RemotePlugin.kt  Skill.kt  TerminalEntry.kt  TokenUsage.kt  ToolSpec.kt
app/src/main/java/com/zeroclaw/android/navigation/: Route.kt  ScannedTokenHolder.kt  SettingsNavAction.kt  TopLevelDestination.kt  ZeroClawAppShell.kt  ZeroClawNavHost.kt
app/src/main/java/com/zeroclaw/android/service/: ApiKeyErrorClassifier.kt  BootReceiver.kt  ConfigTomlBuilder.kt  CostBridge.kt  CronBridge.kt  DaemonNotificationManager.kt  DaemonPersistence.kt  DaemonServiceBridge.kt  DaemonTileService.kt  DoctorValidator.kt  EventBridge.kt  HealthBridge.kt  MemoryBridge.kt  NetworkMonitor.kt  PluginSyncWorker.kt  RetryPolicy.kt  SetupOrchestrator.kt  SkillsBridge.kt  StreamingBridge.kt  ToolsBridge.kt  VisionBridge.kt  ZeroClawDaemonService.kt
app/src/main/java/com/zeroclaw/android/ui/component/: CategoryBadge.kt  CollapsibleSection.kt  ConfirmDeleteDialog.kt  ConnectionPickerSection.kt  EmptyState.kt  ErrorCard.kt  LoadingIndicator.kt  LockGateScreen.kt  MaskedText.kt  ModelSuggestionField.kt  NetworkScanSheet.kt  OfficialPluginBadge.kt  PinEntrySheet.kt  PinKeypad.kt  PluginSectionHeader.kt  ProviderCredentialForm.kt  ProviderDropdown.kt  ProviderIcon.kt  RestartRequiredBanner.kt  SectionHeader.kt  SettingsListItem.kt  SettingsToggleRow.kt  SetupBottomSheet.kt  SkeletonLoader.kt  StatusDot.kt
app/src/main/java/com/zeroclaw/android/util/: BatteryOptimization.kt  CostFormatting.kt  ErrorSanitizer.kt  ExternalAppLauncher.kt  ImageProcessor.kt  LogSanitizer.kt  PinHasher.kt  PowerSaveState.kt  SessionLockManager.kt
app/src/main/java/com/zeroclaw/android/viewmodel/: DaemonViewModel.kt
app/src/main/res/values/: themes.xml
crates/agent/: Cargo.toml
crates/agent/src/: agent_loop.rs  context.rs  lib.rs  session.rs  sheets.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs  onboard.rs
crates/core/: Cargo.toml
crates/core/src/: bus.rs  config.rs  lib.rs  types.rs
crates/cron/: Cargo.toml
crates/cron/src/: lib.rs
crates/discord/: Cargo.toml
crates/discord/src/: lib.rs
crates/heartbeat/: Cargo.toml
crates/heartbeat/src/: lib.rs
crates/mobile-jni/: Cargo.toml
crates/mobile-jni/src/: lib.rs
crates/persistence/: Cargo.toml
crates/providers/: Cargo.toml
crates/providers/src/: anthropic.rs  factory.rs  google.rs  lib.rs  openai.rs  reliable.rs
crates/server/: Cargo.toml
crates/server/src/: gateway.rs  lib.rs
crates/skills/: Cargo.toml
crates/skills/src/: lib.rs
crates/telegram/: Cargo.toml
crates/telegram/src/: lib.rs
crates/tools/: Cargo.toml
crates/tools/src/: android_tools.rs  cron_tools.rs  exec_tool.rs  fs_tools.rs  lib.rs  registry.rs  sandbox.rs  web_fetch.rs  web_search.rs
crates/voice/: Cargo.toml
crates/voice/src/: lib.rs
lib/: build.gradle.kts
skills/github/: README.md  skill.toml
skills/healthcheck/: README.md  skill.toml
skills/session-logs/: README.md  skill.toml
skills/summarize/: README.md  skill.toml
skills/weather/: README.md  skill.toml
(+105 files in other folders)
