[workspace]
members = [
    "crates/*",
    "crates/telegram",
    "crates/discord",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Microclaw Contributors"]
license = "MIT"

[workspace.dependencies]
# Local crates
microclaw-core = { path = "crates/core" }
microclaw-agent = { path = "crates/agent" }
microclaw-providers = { path = "crates/providers" }
microclaw-tools = { path = "crates/tools" }
microclaw-skills = { path = "crates/skills" }
microclaw-server = { path = "crates/server" }
microclaw-cli = { path = "crates/cli" }
microclaw-cron = { path = "crates/cron" }
microclaw-voice = { path = "crates/voice" }
microclaw-heartbeat = { path = "crates/heartbeat" }

# Async Runtime
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# HTTP
reqwest = { version = "0.11", features = ["json", "stream"] }
axum = "0.7"

# Utils
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.14"
walkdir = "2.4"
regex = "1.10"
futures = "0.3"
