[package]
name = "microclaw-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
microclaw-core = { workspace = true }
microclaw-providers = { workspace = true }
microclaw-tools = { workspace = true }
microclaw-skills = { workspace = true }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
