[package]
name = "pocketclaw-discord"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
pocketclaw-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
anyhow = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
