[package]
name = "pocketclaw-persistence"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
pocketclaw-core = { workspace = true }
anyhow.workspace = true
async-trait.workspace = true
chrono = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
tracing.workspace = true
uuid = { workspace = true }

[dependencies.sqlx]
version = "0.7"
features = [
    "sqlite",
    "runtime-tokio-rustls",
    "uuid",
    "chrono",
    "json"
]
