[package]
name = "microclaw-telegram"
version = "0.1.0"
edition = "2021"

[dependencies]
microclaw-core = { path = "../core" }
tokio = { workspace = true }
tracing = { workspace = true }
teloxide = { version = "0.12", features = ["macros"] }
anyhow = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
