[package]
name = "microclaw-voice"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = "1"
