[package]
name = "pocketclaw-voice"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
pocketclaw-core = { workspace = true }
reqwest = { workspace = true, features = ["multipart", "stream"] }
serde = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true }
tracing = { workspace = true }
anyhow.workspace = true
